--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "typeorm_run": "npm run typeorm -- -d src/db/database.connection.ts",
+    "migration:generate": "npm run typeorm_run migration:generate ./src/db/migrations/$npm_config_name$_migration",
+    "migration:create": "npm run typeorm -- migration:create ./src/db/migrations/$npm_config_name$_migration",
+    "migration:run": "npm run typeorm_run migration:run",
+    "migration:revert": "npm run typeorm_run migration:revert",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
